--- a/manifest.json
+++ b/manifest.json
@@ -11,8 +11,8 @@
  
   "browser_action": {
     "default_icon": {
-      "16": "icons/cool-16.png",
-      "32": "icons/cool-32.png"
+      "18": "icons/icon-18.png",
+      "32": "icons/icon-32.png"
     }
   }
 
